--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: #f4f6f8;
+      background: linear-gradient(to right, #86b696, #4b6d4b);
     }
 
     .homepage {
@@ -20,7 +20,7 @@
       justify-content: center;
       text-align: center;
       padding: 100px 20px 60px;
-      background: white;
+      background: linear-gradient(to right, #f1535e, #c7b2b2);
       border-bottom: 1px solid #ccc;
     }
 
@@ -37,9 +37,9 @@
       margin-bottom: 30px;
     }
 
-    .homepage .btn-primary {
+    .homepage .btn-primary {  
       background-color: #007bff;
-      color: white;
+      color: rgb(245, 237, 237);
       padding: 14px 32px;
       border: none;
       border-radius: 8px;
@@ -71,8 +71,8 @@
       display: inline-block;
       padding: 12px 30px;
       margin: 10px;
-      background: #00796b;
-      color: white;
+      background: #166d63;
+      color: rgb(249, 250, 248);
       text-decoration: none;
       border-radius: 30px;
       font-size: 1.2em;
@@ -92,13 +92,14 @@
 <body>
   <div class="homepage">
     <h1>Resume Templates</h1>
-    <p>Each resume template is designed to follow the exact rules you need to get hired faster.<br />
-    Use our resume templates and start building your dream career today!</p>
+    <p style="color: #0c0404;">"Your career journey begins with a great resume — let's build it together."</p>
+    <p style="color: #060101;">"Build a professional, modern resume in minutes — no coding, no hassle."</p>
+
     <button class="btn-primary" onclick="showTemplates()">Create my resume</button>
   </div>
 
   <div class="template-buttons" id="templateSection">
-    <h2>Choose a Template</h2>
+    <h2 style="color: #1a1a1a;">Choose a Template</h2>
     <a class="btn" href="templates/classic.html">Classic</a>
     <a class="btn" href="templates/modern.html">Modern</a>
     <a class="btn" href="templates/creative.html">Creative</a>
