--- a/creative.html
+++ b/creative.html
@@ -14,6 +14,11 @@
       <p><input type="text" placeholder="A short bio about yourself..."></p>
     </section>
     <section>
+      <section>
+        <h2>Contact</h2>
+        <p><input type="text" placeholder="Email or Website"></p>
+      </section>
+
       <h2>Skills & Tools</h2>
       <p><input type="text" placeholder="Design, Writing, Creativity, etc."></p>
     </section>
@@ -21,10 +26,18 @@
       <h2>Projects</h2>
       <p><input type="text" placeholder="Project Name & Description"></p>
     </section>
+
     <section>
-      <h2>Contact</h2>
-      <p><input type="text" placeholder="Email or Website"></p>
+      <h2>Work Experience</h2>
+      <p><input type="text" placeholder="Job Title - Company Name - Duration" /></p>
+      <p><input type="text" placeholder="Key responsibilities and achievements" /></p>
     </section>
+    
+    <section>
+      <h2>Certifications</h2>
+      <p><input type="text" placeholder="Certification Name - Issuing Organization" /></p>
+    </section>
+
     <button onclick="window.print()">Download as PDF</button>
   </div>
 </body>
