--- a/modern.html
+++ b/modern.html
@@ -15,11 +15,23 @@
       <p><input type="text" placeholder="Phone"></p>
       <p><input type="text" placeholder="LinkedIn / Portfolio"></p>
     </section>
+
+    
+    <section>
+      <h2>Education</h2>
+      <p><input type="text" placeholder="Degree - Institution - Year" /></p>
+    </section>
+
     <section>
       <h2>Skills</h2>
       <p><input type="text" placeholder="E.g. Java, HTML, CSS, Python"></p>
     </section>
     <section>
+      <h2>Projects</h2>
+      <p><input type="text" placeholder="Project Name & Description"></p>
+    </section>
+
+  
       <h2>Experience</h2>
       <p><input type="text" placeholder="Job Title, Company, Duration"></p>
     </section>
