--- a/classic.html
+++ b/classic.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Classic Resume Template</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
   <style>
     .resume {
       animation: fadeIn 1s ease-in-out;
