--- a/modern.html
+++ b/modern.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Modern Resume Template</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="resume modern">
