--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 
   <div class="template-buttons" id="templateSection">
     <h2 style="color: #1a1a1a;">Choose a Template</h2>
-    <a class="btn" href="classic.html">Classic</a>
-    <a class="btn" href="modern.html">Modern</a>
-    <a class="btn" href="creative.html">Creative</a>
+    <a class="btn" href="templates/classic.html">Classic</a>
+    <a class="btn" href="templates/modern.html">Modern</a>
+    <a class="btn" href="templates/creative.html">Creative</a>
   </div>
 
   <script>
