--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 <body>
   <div class="homepage">
     <h1>Resume Templates</h1>
-    <p style="color: #0c0404;">"Your career journey begins with a great resume — let's build it together."</p>
-    <p style="color: #060101;">"Build a professional, modern resume in minutes — no coding, no hassle."</p>
+    <p style="color: #3b1e9c;">"Your career journey begins with a great resume — let's build it together."</p>
+    <p style="color: #3b1e9c;">"Build a professional, modern resume in minutes — no coding, no hassle."</p>
 
     <button class="btn-primary" onclick="showTemplates()">Create my resume</button>
   </div>
