--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 <body>
   <div class="homepage">
     <h1>Resume Templates</h1>
-    <p style="color: #3b1e9c;">"Your career journey begins with a great resume — let's build it together."</p>
-    <p style="color: #3b1e9c;">"Build a professional, modern resume in minutes — no coding, no hassle."</p>
-
+  <h4>  <p style="color: #3b1e9c;">"Your career journey begins with a great resume — let's build it together."</p>
+    <p style="color: #3b1e9c;">"Build a professional, modern resume in minutes — no coding, no hassle."</p></h4>
+    
     <button class="btn-primary" onclick="showTemplates()">Create my resume</button>
   </div>
 
